# NSU

./: .gitignore  test.cpp
C++/task0a/: module1.cpp  module1.h
C++/task0b/: Makefile  a.txt  main  main.cpp
C++/task1/: Makefile  trit
C++/task1/src/: main.cpp  trit.cpp  trit.h
C++/task1/tests/: trit_unittest.cpp
C++/task2/: CMakeLists.txt  Makefile  executor  executor_unittests  false_workflow1.txt  false_workflow2.txt  hehe.txt  in.txt  out2.txt  true_workflow3.txt  true_workflow5.txt  workflow1.txt
C++/task2/src/: executor.cpp
C++/task3/: CMakeLists.txt  Makefile  battleship  battleship_unittests  in.txt
C++/task3/src/: battleship.cpp  main.cpp
Java/game/: build.gradle
Java/task1/task1/: in.txt  out.csv
bio/: task1.py
bio/ncbi_dataset/data/: data_report.jsonl  data_table.tsv
bio/task1/: task1.py  task1.txt
bio/task2/: task2.py
csharp/: Program.cs  csharp.sln
csharp/PickyPrincessTest/: AttemptGeneratorTest.cs  CharacterGeneratorTest.cs  FriendTest.cs  HallTest.cs  PickyPrincessTest.csproj  PrincessAttemptTest.cs  PrincessTest.cs  UnitTest1.cs
csharp/PickyPrincessTest/mocks/: CharacterGeneratorMock.cs
csharp/PrincessDB/: .gitignore  Dockerfile  PrincessDB.csproj  Program.cs  docker-compose.yml
csharp/PrincessDB/src/: AttemptGenerator.cs
csharp/pickeprincess/: Program.cs  csharp.csproj
csharp/pickeprincess/net6.0/: csharp  csharp.deps.json
csharp/res/: top100characters.txt
csharp/src/model/: Castle.cs  Character.cs  Friend.cs  Hall.cs  Princess.cs  ThroneRoom.cs
database/: first_base.odb  newDB
database/salesmen/: Salesmen.accdb
flow/: lab1.flow  lab2.flow  lab3.flow  lab4.flow  main  main.cpp
flow/lab10/: arith.lingo  ex10.flow
flow/lab11/: ex11.flow  gram.lingo  in.nm  in2.nm  in3.nm  test_ex.flow  test_grammar.lingo
flow/lab12/: ex12.flow  in1.nm  in4.nm
flow/lab5/: arith.lingo  ex5.flow
flow/lab6/: ex6.flow
flow/lab7/: ex7.flow
flow/lab8/: ex8.flow
flow/lab9/: ex9.flow
opp/lab1/: .~lock.lab1_table.xlsx#  Lab1_Ivakin_19202.odt  lab1_2.out.clog2  lab1_2.out.slog2  lab1_3.out.clog2  lab1_3.out.slog2  lab1_table.xlsx  main1.c  main2  main2.c  main3.c  tmp.c
opp/lab2/: .~lock.Lab2_Ivakin_19202.odt#  Lab2_Ivakin_19202.odt  main1.c  main3.c  opp.ods
opp/lab3/: Lab3_Ivakin_19202.odt  lab3.out.clog2  lab3.out.slog2  lab3_table.xlsx  main.c  runner.sh
opp/lab4/: Lab4_Ivakin_19202.odt  lab4.out.clog2  lab4.out.slog2  main.c  opp.ods
opp/lab5/: Lab5_Ivakin_19202.odt  main.c  opp5.xlsx  sarai.c
os/lab10/: main.c
os/lab11/: main.c
os/lab14/: main.c
os/lab16/: main.c
os/lab28/: lab.c  main.c
os/lab3/: main.c
os/lab4/: main.c
os/lab5/: main.c
os/lab8/: main.c
other/: .~lock.ИЗ на практику_Бакалавриат_ПИиКН_5 семестр.docx#  Practice_5_sem.odp  ИЗ на практику_Бакалавриат_ПИиКН_5 семестр.docx  Литобзор.odt  Отзыв руководителя практики_Бакалавриат_ПИиКН_5 семестр.docx  Отчет о практике_Бакалавриат_ПииКН_5 семестр.docx  Сведения о практике.xlsx
other/Для бакалавров 3 курса/: Прил 1_ИЗ на практику_Бакалавриат_ПИиКН_5 семестр.docx  Прил 2_Отчет о практике_Бакалавриат_ПииКН_5 семестр.docx  Прил 3_Отзыв руководителя практики_Бакалавриат_ПИиКН_5 семестр.docx
task0a/: a.out  main.cpp
task0b/: CMakeLists.txt  a.out  a.txt  main.cpp  out.csv  ouuuut.csv  text.txt
task1/: CMakeLists.txt  main.cpp  trit  trit.cpp  trit_unittests
task1/src/: main.cpp  trit.cpp  trit.h
task1/tests/: CMakeLists.txt  Google_Tests_run  main.cpp  test_task1.cpp  trit_unittest.cpp
task2/: false_workflow3.txt  false_workflow4.txt  false_workflow5.txt  true_workflow2.txt  true_workflow4.txt
task2/src/: executor.cpp  executor.h  main.cpp
task2/tests/: executor_unittest.cpp  main.cpp  trit_unittest.cpp
task3/: battleship  battleship_unittests
task3/src/: battleship.cpp  battleship.h  main.cpp
task3/tests/: battleship_unittest.cpp
web/lab1/: functions.h  ipv4.cpp  ipv6.cpp  main.cpp
web/lab4/: build.gradle.kts  settings.gradle
web/lab5/: build.gradle
web/netSnake-master/: pom.xml  snakes.proto
(+426 files in other folders)
